--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "publisher": "saekiraku",
     "icon": "resources/logo.png",
     "name": "rainbow-fart",
-    "displayName": "Rainbow Fart",
+    "displayName": "🌈 Rainbow Fart",
     "description": "This extension will keep giving you compliment while you are coding.",
     "version": "1.0.0",
     "engines": {
