--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "axios": "^0.19.2",
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "get-port": "^5.1.1",
+        "glob": "^7.1.6",
         "open": "^7.0.4",
-        "vue-hot-reload-api": "^2.3.4"
+        "vue-hot-reload-api": "^2.3.4",
+        "vue-i18n": "^8.18.1"
     }
 }
