--- a/src/built-in-voice-packages/built-in-voice-chinese/manifest.json
+++ b/src/built-in-voice-packages/built-in-voice-chinese/manifest.json
@@ -3,11 +3,10 @@
     "display-name": "Built-In Voice (Chinese)",
     "avatar": "avatar.jpg",
     "avatar-dark":"avatar-dark.jpg",
-    "version": "1.0.2",
+    "version": "1.0.0",
     "description": "内置中文语音包",
     "languages": ["javascript"],
     "author": ["Alice Moon"],
     "gender": "female",
-    "locale": "Chinese",
-    "main": "index.js"
+    "locale": "Chinese"
 }
