--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "build": "npm run build:page && vsce package"
     },
     "devDependencies": {
-        "@qiqi1996/qi-design-vue": "^0.9.0",
+        "@qiqi1996/qi-design-vue": "^0.9.1",
         "@types/node": "^13.11.0",
         "@types/vscode": "^1.33.0",
         "@vue/component-compiler-utils": "^3.1.2",
@@ -49,6 +49,8 @@
         "express": "^4.17.1",
         "get-port": "^5.1.1",
         "glob": "^7.1.6",
+        "jszip": "^3.4.0",
+        "multer": "^1.4.2",
         "open": "^7.0.4",
         "vue-hot-reload-api": "^2.3.4",
         "vue-i18n": "^8.18.1"
