--- a/src/page/src/components/settings/settings.i18n.json
+++ b/src/page/src/components/settings/settings.i18n.json
@@ -3,12 +3,16 @@
         "voice-packages": "Voice Packages",
         "customization": "Customization",
         "preference": "Preference",
-        "about": "About"
+        "about": "About",
+
+        "developing": "Sorry, this is still under developing."
     },
     "zh": {
         "voice-packages": "语音包",
         "customization": "定制",
         "preference": "偏好设置",
-        "about": "关于"
+        "about": "关于",
+
+        "developing": "抱歉，此功能仍在开发中。"
     }
 }
