--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jszip": "^3.4.0",
     "lodash": "^4.17.15",
     "multer": "^1.4.2",
+    "nodejs-websocket": "^1.7.2",
     "open": "^7.0.4",
     "vue-hot-reload-api": "^2.3.4",
     "vue-i18n": "^8.18.1"
